--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 </head>
 <body>
     <!-- Header -->
-    <header></header>
+    <header>
+        <form>
+            <input id="nomeCognome" type="text" placeholder="qui">
+            <input id="chilometri" type="text" placeholder="qui">
+          </form> 
+          <select id="fasciaEta">
+            <option value="minorenne">Minorenne</option>
+            <option value="maggiorenne">Maggiorenne</option>
+            <option value="over65">Over 65</option>
+        </select>
+        <button class="button" type="button">Genera</button> 
+
+    </header>
     <!--/ Header -->
 
 
