--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
                     <form class="box" action="">
                         <label for="nomeCognome">Nome Cognome</label>
                         <input class="miniBox" id="nomeCognome" name="nomeCognome" type="text" placeholder="Inserisci">
-                    </form>
-                    <form class="box" action="">
+
                         <label for="chilometri">Km da percorrere</label>
-                        <input class="miniBox" id="chilometri" name="chilometri" type="text" placeholder="Inserisci">
-                    </form>
-                    <form class="box" action="">
+                        <input class="miniBox" id="chilometri" name="chilometri" type="number" placeholder="Inserisci">
+
                         <label for="fasciaEta">Fascia d'età</label> 
                         <select class="miniBox" id="fasciaEta" name="fasciaEta">
                     
@@ -31,12 +29,13 @@
                         <option id="maggiorenne" value="maggiorenne">Maggiorenne</option>
                         <option id="over65" value="over65">Over 65</option>
                         </select>
-                    </form>
                 </div>
                 <div>
                     <button class="button stilebtn" type="button">Genera</button> 
-                    <input class="reset stilebtn" type="button" value="Reset" onclick="clearResult()">            
+                    <button class="reset stilebtn" id="reset" type="reset" value="Reset">Reset</button>
                 </div>
+            </form>
+
     </header>  
     <!--/ Header -->
 
@@ -49,24 +48,24 @@
             <div class="ticketbox">
                 <div class="boxnome weight700"> 
                     <span>NOME PASSEGGERO</span>
-                    <span class="nomeCognome">nomeCognome</span>
+                    <span id="textnomeCognome">nomeCognome</span>
                 </div>
                 <div class="boxinfo">
                     <div class="miniboxinfo">
                         <span class="weight700">Offerta</span>
-                        <span>Biglietto Standard</span>
+                        <span id="ticket">Biglietto Standard</span>
                     </div>
                     <div class="miniboxinfo">
                         <span class="weight700">Carrozza</span>
-                        <span></span>
+                        <span id="carrozza"></span>
                     </div>
                     <div class="miniboxinfo">
                         <span class="weight700">Codice CP</span>
-                        <span></span>
+                        <span id="text-cp"></span>
                     </div>
                     <div class="miniboxinfo">
                         <span class="weight700">Costo biglietto</span>
-                        <span class="prezzo"></span>
+                        <span id="prezzo"></span>
                     </div>
                 </div>
             </div>
